dockerize the install

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   globaleaks:
-    image: myglobaleaks
+    image: ckeeney/docker-globaleaks
     build: .
     cap_add:
       - NET_ADMIN
