--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,6 @@ services:
     ports:
       - 80:80
       - 443:443
+    volumes:
+      - ./data/var:/var/globaleaks
+      - ./data/etc:/etc/default/globaleaks
